--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
           </div>
         </div>
       </section>
+
+      <!-- -------- footer -------- -->
       <footer class="footer">
         <div class="footer-content">
           <p>
